snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
0ae8f72cfc0c554b6404e3c876a2d01f